--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,14 +4,14 @@ plugins {
 }
 
 android {
-    namespace 'com.example.bmicalculator'
+    namespace 'com.projectbmi.bmicalculator'
     compileSdk 34
 
     defaultConfig {
-        applicationId "com.example.bmicalculator"
+        applicationId "com.projectbmi.bmicalculator"
         minSdk 21
-        targetSdk 33
-        versionCode 1
+        targetSdk 34
+        versionCode 3
         versionName "1.0"
 
 
