--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.projectbmi.bmicalculator"
-    >
+    xmlns:dist="http://schemas.android.com/apk/distribution"
+    package="com.projectbmi.bmicalculator">
+
+    <!-- Add the dist:module element here -->
+    <dist:module
+        dist:fusing="true"
+        dist:instant="false"
+        dist:onDemand="false" />
 
     <application
         android:allowBackup="true"
@@ -14,9 +20,23 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.BMICALCULATOR"
         tools:targetApi="31">
+
+        <!-- SplashActivity as Launcher -->
+        <activity
+            android:name=".SplashActivity"
+            android:exported="true"
+            android:windowBackground="@color/navy"
+            >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
         <activity
             android:name=".MainActivity"
             android:exported="true">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
